--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Metasploit modules
 description: Collection of Metasploit modules
 show_downloads: true
-google_analytics:
+google_analytics: UA-139227464-1
 theme: jekyll-theme-cayman
